[package]
name = "discord-prediction-market-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
chrono-english = "0.1.7"
chrono-tz = "0.8.3"
derive_more = "0.99.17"
fuzzy-matcher = "0.3.7"
im = { version = "15.1.0", features = ["serde"] }
poise = "0.5.5"
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
