[package]
name = "discord-prediction-market-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
chrono-english = "0.1.7"
chrono-tz = "0.10.1"
derive_more = { version = "1.0.0", features = ["display", "add", "mul", "add_assign"] }
fuzzy-matcher = "0.3.7"
im = { version = "15.1.0", features = ["serde"] }
poise = "0.6.1"
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.1", features = ["rt-multi-thread"] }
