[package]
name = "discord-prediction-market-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
chrono-english = "0.1.7"
chrono-tz = "0.10.3"
derive_more = { version = "2.0.1", features = ["display", "add", "mul", "add_assign"] }
fuzzy-matcher = "0.3.7"
im = { version = "15.1.0", features = ["serde"] }
poise = "0.6.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
